--- a/404.md
+++ b/404.md
@@ -3,11 +3,6 @@ layout: center
 permalink: /404.html
 ---
 
-# 404
+# Oops
 
-Sorry, we can't seem to find this page's pixylls.
-
-<div class="mt3">
-  <a href="{{ site.baseurl }}/" class="button button-blue button-big">Home</a>
-  <a href="{{ site.baseurl }}/contact/" class="button button-blue button-big">Contact</a>
-</div>
+Sorry, we can't seem to find this page from Jay's blog. If you're looking for a post, it's probably [here](www.jayshah.me) somewhere.
