another broken link

--- a/404.md
+++ b/404.md
@@ -5,4 +5,4 @@ permalink: /404.html
 
 # Oops
 
-Sorry, we can't seem to find this page from Jay's blog. If you're looking for a post, it's probably [here](www.jayshah.me) somewhere.
+Sorry, we can't seem to find this page from Jay's blog. If you're looking for a post, it's probably [here](http://www.jayshah.me) somewhere.
