--- a/_posts/2017-01-01-traffic.md
+++ b/_posts/2017-01-01-traffic.md
@@ -6,7 +6,7 @@ summary:    A case study on Chicago traffic
 hidden:     true
 ---
 
-People tend to talk a lot about traffic - no one is immune to it and everyone has a theory on why it exists. So why can't we figure out how to deal with it? The answer, as it often is, is that it's complicated. When we take a look at traffic literature, there are three prevailing reasons why traffic exists: <br><br>
+People tend to talk a lot about traffic - no one is immune to it and everyone has a theory on why it exists. So why can't we figure out how to deal with it? The answer, as it often is, is that it's complicated. When we take a look at traffic literature, there are three prevailing theories on why traffic exists: <br><br>
 
 **1. Demand for road usage exceeds capacity** (e.g., more cars on the road during rush hour than a road can handle)
 
