first full draft of post

--- a/_posts/2017-01-01-traffic.md
+++ b/_posts/2017-01-01-traffic.md
@@ -1,12 +1,13 @@
 ---
 layout:     post
-title:      Why does traffic occur? A different perspective
+title:      Fixing traffic. A Chicago case study
 date:       2017-01-01 
-summary:    A case study on Chicago traffic
+summary:    
 hidden:     true
 ---
 
-People tend to talk a lot about traffic - no one is immune to it and everyone has a theory on why it exists. So why can't we figure out how to deal with it? The answer, as it often is, is that it's complicated. When we take a look at traffic literature, there are three prevailing theories on why traffic jams occur: <br><br>
+
+Traffic theory might just be the darling of the data science research. Its universal relevance coupled with technical nature makes it a frequent topic of conversation in the technical community. If you were to distill these discussions into three simple theories on why traffic exists, you'd arrive at a list that looks something like this:<br><br>
 
 **1. Demand for road usage exceeds capacity** (e.g., more cars on the road during rush hour than a road can handle)
 
@@ -14,7 +15,11 @@ People tend to talk a lot about traffic - no one is immune to it and everyone ha
 
 **3. Design and construction of roads creates friction in the flow of traffic** (e.g., a traffic light that takes a long time to change)
 
-Majority of the dialogue on traffic focuses on the first two causes, which are difficult to address but easy to observe. The third point is the opposite in nature; addressable via better design but challenging to pinpoint. This third theory is the focus of this analysis.
+The first two theories are easy to observe but difficult to address. They resonate well with anyone who's been stuck during their morning commute but require changing the behavior of millions of drivers. Because they are easy to identify with, most of the dialogue on traffic anchors on these two theories.
+
+The third theory is opposite in nature; its difficult to observe without a system-wide view of traffic but has an actionable solution (improved road design).
+
+In the sea of rich discussion, my thesis on traffic theory is simple - the best solutions to traffic are those that are easiest to execute. In this spirit, theory #3 will be the focus of this analysis.
 
 ## How to study traffic
 
@@ -30,7 +35,38 @@ When we visualize a random subset of this data, we can see the distribution of b
 
 ## Identifying traffic jams
 
+Identifying a slow down or jam in traffic is a relative calculation - we only know that the flow of traffic has slowed because we understand how quickly it should be moving otherwise. Therefore to create a model of traffic, we must understand the speed at which traffic moves through the city at any specific location and at any specific time.
+
+To create such a model, imagine dividing the city of Chicago into a large grid with thousands of cells the size of a city block; each cell could have its own profile of speed throughout the day. If we then highlight the cells in which vehicles are moving at below average speeds, we can create the following visualization:
+
 ![](/assets/post6_traffic_all.gif)
 
-## 
+The highlighted areas of traffic appear to make sense, flowing in and out of the city towards the beginning and end of each business day.
+
+## Zeroing in on the source of traffic
+
+The final piece of understanding where exacty traffic occurs is to study how traffic accumulates over time. Because traffic behaves recursively, a slow down at a specific location will create another slow down just before it (and so on, and so forth).
+
+A good example of this behavior is along the famouse Lake Shore Blvd (subset of US-41). The visualization below shows the buildup of Northbound traffic in the mornings. Red indicates areas where traffic is flowing at less than half of the observed speed limit.
+
+![](/assets/post6_graphic1.jpg)
+
+You may notice that traffic originates from two points in particular throughout the morning. Let's take a look at each of these locations to try and identify what's causing the traffic. 
+
+![](/assets/post6_graphic2.jpg)
+
+Point A represents the first opportunity to enter the city from Lake Shore Blvd. Up until this intersection, traffic has been flowing across 5 lanes at 40-50 mphs with only a few traffic lights in the preceeding several miles. However, only two of the five lanes actually go into the city. In addition to the reduction in number of lanes, a traffic light further restricts the flow of cars. Given that a substantial percentage of commuters on Lake Shore are headed downtown, its not difficult to see why this particular intersection could be a bottleneck.
+
+![](/assets/post6_graphic3.jpg)
+
+Lake Shore and Waldron is not a particulary exciting intersection. Just south of the Soldier's stadium, the only notable attribute of this intersection is that it is marked by a traffic light. Given that this is the first Northbound traffic light in several miles, its existence alone likely contributes to congestion. 
+
+## Solving traffic
+
+It's difficult to imagine a world without traffic, even with autonomous cars. While it certainly should be the aspiration, I'm not yet convined it will be our reality. However the path to realizing this aspiration should be one of structural, systemic, solutions - not behavioral.
+
+Engineers and academics have tried time after time to influence driver behavior unsuccessfully. Commuter tax, promotion of carshare, and attempts to influence driving styles have all fallen short of addressing the problem.
+
+Analyses like these, while are brief, show that there are clear ways to uncover friction in traffic and potential paths to improve the overall traffic grid.
+
 
