--- a/_posts/2017-01-01-traffic.md
+++ b/_posts/2017-01-01-traffic.md
@@ -49,15 +49,15 @@ The final piece of understanding where exacty traffic occurs is to study how tra
 
 A good example of this behavior is along the famouse Lake Shore Blvd (subset of US-41). The visualization below shows the buildup of Northbound traffic in the mornings. Red indicates areas where traffic is flowing at less than half of the observed speed limit.
 
-![](/assets/post6_graphic1.jpg)
+![](/assets/post6_graphic1.JPG)
 
 You may notice that traffic originates from two points in particular throughout the morning. Let's take a look at each of these locations to try and identify what's causing the traffic. 
 
-![](/assets/post6_graphic2.jpg)
+![](/assets/post6_graphic2.JPG)
 
 Point A represents the first opportunity to enter the city from Lake Shore Blvd. Up until this intersection, traffic has been flowing across 5 lanes at 40-50 mphs with only a few traffic lights in the preceeding several miles. However, only two of the five lanes actually go into the city. In addition to the reduction in number of lanes, a traffic light further restricts the flow of cars. Given that a substantial percentage of commuters on Lake Shore are headed downtown, its not difficult to see why this particular intersection could be a bottleneck.
 
-![](/assets/post6_graphic3.jpg)
+![](/assets/post6_graphic3.JPG)
 
 Lake Shore and Waldron is not a particulary exciting intersection. Just south of the Soldier's stadium, the only notable attribute of this intersection is that it is marked by a traffic light. Given that this is the first Northbound traffic light in several miles, its existence alone likely contributes to congestion. 
 
