--- a/_posts/2017-01-01-traffic.md
+++ b/_posts/2017-01-01-traffic.md
@@ -1,29 +1,38 @@
 ---
 layout:     post
-title:      Fixing traffic. A Chicago case study
+title:      To fix traffic, change the roads not the drivers
 date:       2017-01-01 
-summary:    
+summary:    A Chicago case study
 hidden:     true
 ---
 
+There is an insurmountable volume of literature as to why traffic exists. Not only do academics love to opine on the problem, but anyone whose sat in traffic has their own theory on how to address it (what else are you supposed to think about with all that time in the car?).
 
-Traffic theory might just be the darling of the data science research. Its universal relevance coupled with technical nature makes it a frequent topic of conversation in the technical community. If you were to distill these discussions into three simple theories on why traffic exists, you'd arrive at a list that looks something like this:<br><br>
+If you were to distill this dialogue on traffic into a few simple hypotheses as to why it exists, you'd arrive at a list that looks something like this:
 
-**1. Demand for road usage exceeds capacity** (e.g., more cars on the road during rush hour than a road can handle)
+<p style="margin-left: 20px"><b>1. Demand for road usage exceeds capacity</b> (e.g., more cars on the road during rush hour than a road can handle) </p>
 
-**2. Human driving behavior creates inefficiencies** (e.g., a car that brakes hard will cause all the cars behind it to brake even harder)
+<p style="margin-left: 20px"><b>2. Human driving behavior creates inefficiencies</b> (e.g., a car that brakes hard will cause all the cars behind it to brake even harder)</p>
 
-**3. Design and construction of roads creates friction in the flow of traffic** (e.g., a traffic light that takes a long time to change)
+<p style="margin-left: 20px"><b>3. Design and construction of roads creates friction in the flow of traffic</b> (e.g., a traffic light that takes a long time to change)</p>
 
-The first two theories are easy to observe but difficult to address. They resonate well with anyone who's been stuck during their morning commute but require changing the behavior of millions of drivers. Because they are easy to identify with, most of the dialogue on traffic anchors on these two theories.
+In this post, I'm going to make the case for why theory #3 is our best bet in addressing traffic and a tactical example of how to act upon it.
 
-The third theory is opposite in nature; its difficult to observe without a system-wide view of traffic but has an actionable solution (improved road design).
+## Choosing the right flavor of traffic solutions
 
-In the sea of rich discussion, my thesis on traffic theory is simple - the best solutions to traffic are those that are easiest to execute. In this spirit, theory #3 will be the focus of this analysis.
+The irony in traffic theory is that often the most overlooked aspect of the solution is also the most important: *the drivers*. Previous research shows that time after time, we have overestimated our ability to influence driver behavior and demand in general. Consider for example:
+
+1. Changing the speed limit of a road does not actually affect the speed at which cars drive on it <sup>1</sup>
+
+2. Increasing capacity of roads translates directly into an increase in demand of road usage <sup>2</sup>
+
+3. Creating HOV lanes does not meaningfully increase ride sharing <sup>3</sup>
+
+If we think of traffic as a flow of water molecules, history suggests that it is easier to change the medium on which these molecues travel rathar than the intrinsic attributes of the molecules themselves. With this spirit, let's spend some time diving into theory #3.
 
 ## How to study traffic
 
-Studying traffic requires a dataset that is difficult to curate: real vehicle data with speed, direction, and location over a significant period of time. While it would be challenging to get this data for personal/civilian cars, there is one type of vehicle that is often tracked publically: **public buses**. <br><br>
+Studying traffic requires a dataset that is difficult to curate: real vehicle data with speed, direction, and location over a significant period of time. While it would be challenging to get this data for personal/civilian cars, there is one type of vehicle that is often tracked publicly: **public buses**. <br><br>
 
 The Chicago Transit Authority has an open API which tracks each bus in real time, around the clock. Over the course of a month, I was able to collect 2.6M records of bus locations across 30 days and all 100+ bus routes. The raw data looks like this:
 
@@ -33,21 +42,19 @@ When we visualize a random subset of this data, we can see the distribution of b
 
 ![](/assets/post6_overview.png)
 
-## Identifying traffic jams
+## Modeling traffic jams
 
-Identifying a slow down or jam in traffic is a relative calculation - we only know that the flow of traffic has slowed because we understand how quickly it should be moving otherwise. Therefore to create a model of traffic, we must understand the speed at which traffic moves through the city at any specific location and at any specific time.
+Identifying a slow down or jam in traffic is a relative calculation - we only know that the flow of traffic has slowed because we understand how quickly it should be moving otherwise. Therefore to create a model of traffic, we need to understand the speed at which traffic moves through the city at any specific location and at any specific time.
 
-To create such a model, imagine dividing the city of Chicago into a large grid with thousands of cells the size of a city block; each cell could have its own profile of speed throughout the day. If we then highlight the cells in which vehicles are moving at below average speeds, we can create the following visualization:
+To create such a model, imagine dividing the city of Chicago into a large grid with thousands of cells each the size of a city block; each cell could have its own profile of average speed based on the time of day. If we highlight the cells in which vehicles are moving at below average speeds, we're able to create the following visualization:
 
 ![](/assets/post6_traffic_all.gif)
 
-The highlighted areas of traffic appear to make sense, flowing in and out of the city towards the beginning and end of each business day.
+The highlighted areas of traffic show congestion during the beginning and end of each business day, consistent with what we'd expect to see.
 
-## Zeroing in on the source of traffic
+## Detecting structural sources of traffic
 
-The final piece of understanding where exacty traffic occurs is to study how traffic accumulates over time. Because traffic behaves recursively, a slow down at a specific location will create another slow down just before it (and so on, and so forth).
-
-A good example of this behavior is along the famouse Lake Shore Blvd (subset of US-41). The visualization below shows the buildup of Northbound traffic in the mornings. Red indicates areas where traffic is flowing at less than half of the observed speed limit.
+The final link to establish in the data is the relationship between where traffic builds up and the inherent characteristics of that piece of road. An easy 'build up' to observe is along the famous Lake Shore Blvd during Chicago's morning rush into the city (Northbound).
 
 ![](/assets/post6_graphic1.JPG)
 
@@ -55,18 +62,26 @@ You may notice that traffic originates from two points in particular throughout 
 
 ![](/assets/post6_graphic2.JPG)
 
-Point A represents the first opportunity to enter the city from Lake Shore Blvd. Up until this intersection, traffic has been flowing across 5 lanes at 40-50 mphs with only a few traffic lights in the preceeding several miles. However, only two of the five lanes actually go into the city. In addition to the reduction in number of lanes, a traffic light further restricts the flow of cars. Given that a substantial percentage of commuters on Lake Shore are headed downtown, its not difficult to see why this particular intersection could be a bottleneck.
+Point A represents the first opportunity to enter downtown Chicago from Lake Shore Blvd. Prior to this intersection, traffic has been flowing across five lanes at 40-50 mph with only a few traffic lights in the preceding several miles. In addition to the traffic light, the number of lanes decreases from five to three, with only two lanes actually going into the city. Given that a substantial percentage of commuters on Lake Shore are headed downtown, it's easy to see why cars could be backed up at this intersection during peak times.
 
 ![](/assets/post6_graphic3.JPG)
 
-Lake Shore and Waldron is not a particulary exciting intersection. Just south of the Soldier's stadium, the only notable attribute of this intersection is that it is marked by a traffic light. Given that this is the first Northbound traffic light in several miles, its existence alone likely contributes to congestion. 
+Lake Shore and Waldron is not a particularly exciting intersection. Just south of Soldier Field, the only notable attribute of this intersection is that it is marked by a traffic light. Given that this is the first Northbound traffic light in several miles, poor timing of the light alone could result in congestion. 
 
-## Solving traffic
+## The best kind of traffic solutions
 
-It's difficult to imagine a world without traffic, even with autonomous cars. While it certainly should be the aspiration, I'm not yet convined it will be our reality. However the path to realizing this aspiration should be one of structural, systemic, solutions - not behavioral.
+My thesis on traffic is simple - change the roads we drive on because changing the way we drive on them is much harder. Identifying friction in traffic is non-trivial but achievable. Yes, improving roads is expensive, time consuming, and bureaucratic - but it is far more in our control than the behavior of thousands, if not millions, of people each day.
 
-Engineers and academics have tried time after time to influence driver behavior unsuccessfully. Commuter tax, promotion of carshare, and attempts to influence driving styles have all fallen short of addressing the problem.
+So the next time you're stuck in traffic, instead of getting frustrated with the cars around you, take a moment to reflect on the road you're driving on. Could it have been better designed? Is anyone actually using the HOV lane? Are you waiting on a poorly timed light? You might not be going anywhere for a while.
 
-Analyses like these, while are brief, show that there are clear ways to uncover friction in traffic and potential paths to improve the overall traffic grid.
+<br><br>
+
+Footnotes:
+
+[1] Speed limits are usually set based on the "85th percentile rule". That is that the optimal speed limit is the 85th percentile of actual vehicle speed on the road. Studies show that even when the speed limit is changed, the 85th percentile speed remains constant [[Source](http://www.michigan.gov/documents/Establishing_Realistic_Speedlimits_85625_7.pdf)]
+
+[2] The intuitive remedy to congested highways is simply to add more lanes. Researchers have found that there is a 1:1 relationship between highway capacity and highway demand - motorists will increase miles driven up until road capacity is consumed. This pattern holds true as well for cities in which public transportation is introduced - for every car that is taken off the road, another is added directly back in the form of a new commuter [[Source](http://www.brown.edu/Departments/Economics/Faculty/Matthew_Turner/papers/published/Duranton_Turner_AER_2011.pdf)]
+
+[3] The complexity of coordinating ride sharing limits the impact of HOV lanes. Though there have been some time savings observed from introducing HOV lanes, the cars taken off the road (from people sharing rides) does not offset the reduction in capacity of a highway (from taking away a lane on the highway and turning it into an HOV lane) [[Source](http://www.sciencedirect.com/science/article/pii/S0968090X07000435)]
 
 
