--- a/_posts/2017-01-01-traffic.md
+++ b/_posts/2017-01-01-traffic.md
@@ -1,26 +1,16 @@
 ---
 layout:     post
 title:      To fix traffic, change the roads not the drivers
-date:       2017-01-01 
+date:       2017-03-05 
 summary:    A Chicago case study
-hidden:     true
+hidden:     false
+og_image:   /assets/post6_overview.png
 ---
 
-There is an insurmountable volume of literature as to why traffic exists. Not only do academics love to opine on the problem, but anyone whose sat in traffic has their own theory on how to address it (what else are you supposed to think about with all that time in the car?).
+Traffic is a beautiful problem - relevant to most but addressable by few. If the American dream is a steady job and a modest home, then the American reality certainly includes time spent traveling between the two.
+<br><br/>
 
-If you were to distill this dialogue on traffic into a few simple hypotheses as to why it exists, you'd arrive at a list that looks something like this:
-
-<p style="margin-left: 20px"><b>1. Demand for road usage exceeds capacity</b> (e.g., more cars on the road during rush hour than a road can handle) </p>
-
-<p style="margin-left: 20px"><b>2. Human driving behavior creates inefficiencies</b> (e.g., a car that brakes hard will cause all the cars behind it to brake even harder)</p>
-
-<p style="margin-left: 20px"><b>3. Design and construction of roads creates friction in the flow of traffic</b> (e.g., a traffic light that takes a long time to change)</p>
-
-In this post, I'm going to make the case for why theory #3 is our best bet in addressing traffic and a tactical example of how to act upon it.
-
-## Choosing the right flavor of traffic solutions
-
-The irony in traffic theory is that often the most overlooked aspect of the solution is also the most important: *the drivers*. Previous research shows that time after time, we have overestimated our ability to influence driver behavior and demand in general. Consider for example:
+Over the years I've enjoyed reading potential solutions to the problem, but struggle with one particular inconsistency between findings - **researchers regularly suggest changing changing how people drive, but changing driver behavior is next to impossible.** Consider for example:
 
 1. Changing the speed limit of a road does not actually affect the speed at which cars drive on it <sup>1</sup>
 
@@ -28,9 +18,9 @@ The irony in traffic theory is that often the most overlooked aspect of the solu
 
 3. Creating HOV lanes does not meaningfully increase ride sharing <sup>3</sup>
 
-If we think of traffic as a flow of water molecules, history suggests that it is easier to change the medium on which these molecues travel rathar than the intrinsic attributes of the molecules themselves. With this spirit, let's spend some time diving into theory #3.
+As a result, my thesis on traffic is simple - **change the roads we drive on because changing the way we drive on them is much harder.** What's wrong with roads today and how can we improve them? I studied Chicago traffic for a month in search of an answer.
 
-## How to study traffic
+## Studying traffic
 
 Studying traffic requires a dataset that is difficult to curate: real vehicle data with speed, direction, and location over a significant period of time. While it would be challenging to get this data for personal/civilian cars, there is one type of vehicle that is often tracked publicly: **public buses**. <br><br>
 
@@ -38,21 +28,22 @@ The Chicago Transit Authority has an open API which tracks each bus in real time
 
 ![](/assets/post6_raw_data.png)
 
-When we visualize a random subset of this data, we can see the distribution of buses across the city: 
+When we visualize a snapshot of this data, we can see the distribution of buses across the city: 
 
 ![](/assets/post6_overview.png)
 
-## Modeling traffic jams
+## Modeling congestion
 
 Identifying a slow down or jam in traffic is a relative calculation - we only know that the flow of traffic has slowed because we understand how quickly it should be moving otherwise. Therefore to create a model of traffic, we need to understand the speed at which traffic moves through the city at any specific location and at any specific time.
+<br><br/>
 
-To create such a model, imagine dividing the city of Chicago into a large grid with thousands of cells each the size of a city block; each cell could have its own profile of average speed based on the time of day. If we highlight the cells in which vehicles are moving at below average speeds, we're able to create the following visualization:
+To create such a model, imagine dividing the city of Chicago into a large grid with thousands of cells each the size of a city block; each cell could have its own profile of speed and how it varies throughout the day. If we highlight cells in which traffic is moving at below-peak speeds, we're able to create the following visualization:
 
 ![](/assets/post6_traffic_all.gif)
 
 The highlighted areas of traffic show congestion during the beginning and end of each business day, consistent with what we'd expect to see.
 
-## Detecting structural sources of traffic
+## Zeroing in on the source of traffic
 
 The final link to establish in the data is the relationship between where traffic builds up and the inherent characteristics of that piece of road. An easy 'build up' to observe is along the famous Lake Shore Blvd during Chicago's morning rush into the city (Northbound).
 
@@ -68,20 +59,29 @@ Point A represents the first opportunity to enter downtown Chicago from Lake Sho
 
 Lake Shore and Waldron is not a particularly exciting intersection. Just south of Soldier Field, the only notable attribute of this intersection is that it is marked by a traffic light. Given that this is the first Northbound traffic light in several miles, poor timing of the light alone could result in congestion. 
 
-## The best kind of traffic solutions
+## The short attention span theory
 
-My thesis on traffic is simple - change the roads we drive on because changing the way we drive on them is much harder. Identifying friction in traffic is non-trivial but achievable. Yes, improving roads is expensive, time consuming, and bureaucratic - but it is far more in our control than the behavior of thousands, if not millions, of people each day.
+If we shift our focus to the roads instead of the drivers, it's not identifying solutions that is challenging, it's how we implement them. For a long list of reasons, roads today take years to build and decades to revise <sup>4</sup>. In an environment where most projects have a 5-10 year time horizon, a fact-based, iterative approach to addressing congestion (such as the analysis above) represents a fundamentally different way to think about traffic engineering. The short attention span theory, or the idea that **rapidly identifying and implementing solutions is more effective than long term, structural projects**, has been successfully applied on numerous occasions <sup>5</sup>.  <br><br>
 
-So the next time you're stuck in traffic, instead of getting frustrated with the cars around you, take a moment to reflect on the road you're driving on. Could it have been better designed? Is anyone actually using the HOV lane? Are you waiting on a poorly timed light? You might not be going anywhere for a while.
+Given the fundamental shift in how roads will be used over the next several decades, it is especially timely now to revisit how we think about traffic engineering. The journey to a world with less congestion is certainly not new, but still far from complete. Autonomous vehicles and AI-based traffic management will help, but many of these gains will be offset by sustained growth in travel distances and demand for shipping and logistics. Said simply, demand for infrastructure is still outpacing capacity.<br><br>
+
+For those of you who are traffic engineers, I'm optimistic innovation in vehicles will be met with innovation in infrastructure. To the rest of us - the next time you're stuck in traffic, take a moment to reflect on the road you're driving on. Could it have been better designed? Is anyone actually using the HOV lane? Are you waiting on a poorly timed light? You might not be going anywhere for a while.
 
 <br><br>
 
+
 Footnotes:
 
-[1] Speed limits are usually set based on the "85th percentile rule". That is that the optimal speed limit is the 85th percentile of actual vehicle speed on the road. Studies show that even when the speed limit is changed, the 85th percentile speed remains constant [[Source](http://www.michigan.gov/documents/Establishing_Realistic_Speedlimits_85625_7.pdf)]
+[1] Speed limits are usually set based on the "85th percentile rule". The rule states that the optimal speed limit for a road is the 85th percentile speed of the vehicles driving on it. Studies show that even when the speed limit is changed, the 85th percentile speed remains constant [[Source](http://www.michigan.gov/documents/Establishing_Realistic_Speedlimits_85625_7.pdf)]
 
 [2] The intuitive remedy to congested highways is simply to add more lanes. Researchers have found that there is a 1:1 relationship between highway capacity and highway demand - motorists will increase miles driven up until road capacity is consumed. This pattern holds true as well for cities in which public transportation is introduced - for every car that is taken off the road, another is added directly back in the form of a new commuter [[Source](http://www.brown.edu/Departments/Economics/Faculty/Matthew_Turner/papers/published/Duranton_Turner_AER_2011.pdf)]
 
 [3] The complexity of coordinating ride sharing limits the impact of HOV lanes. Though there have been some time savings observed from introducing HOV lanes, the cars taken off the road (from people sharing rides) does not offset the reduction in capacity of a highway (from taking away a lane on the highway and turning it into an HOV lane) [[Source](http://www.sciencedirect.com/science/article/pii/S0968090X07000435)]
+[4] There are two commonly cited reasons for underinvestment in improving infrastructure. The first is a heavy bias of budget dollars to be allocated to new construction instead of improvements. The second is that tax revenue from vehicle usage and gas purchases is outnumbered by the actual cost of operating roads ~100:1 [[Source](http://www.lao.ca.gov/Publications/Report/3366#Highway_and_Road_Maintenance_and_Repair_Needs)]
+
+
+[5]
+The state of Washington found that roundabouts reduce delays by 89% and vehicle stops by 56% in areas they were implemented [[Source](https://www.wsdot.wa.gov/Safety/roundabouts/benefits.htm). In another study, improving logic and timing of traffic lights in a Switzerland town showed 20% reduction in travel time [[Source](http://news.mit.edu/2014/traffic-lights-theres-a-better-way-0707)]
+ 
 
 
