--- a/_posts/2017-01-01-traffic.md
+++ b/_posts/2017-01-01-traffic.md
@@ -2,7 +2,7 @@
 layout:     post
 title:      To fix traffic, change the roads not the drivers
 date:       2017-03-05 
-summary:    A Chicago case study
+summary:    A case study on Chicago traffic
 hidden:     false
 og_image:   /assets/post6_overview.png
 ---
@@ -10,7 +10,7 @@ og_image:   /assets/post6_overview.png
 Traffic is a beautiful problem - relevant to most but addressable by few. If the American dream is a steady job and a modest home, then the American reality certainly includes time spent traveling between the two.
 <br><br/>
 
-Over the years I've enjoyed reading potential solutions to the problem, but struggle with one particular inconsistency between findings - **researchers regularly suggest changing changing how people drive, but changing driver behavior is next to impossible.** Consider for example:
+Over the years I've enjoyed reading potential solutions to the problem, but struggle with one particular inconsistency between findings - **researchers regularly suggest changing how people drive, but changing driver behavior is next to impossible.** Consider for example:
 
 1. Changing the speed limit of a road does not actually affect the speed at which cars drive on it <sup>1</sup>
 
@@ -61,9 +61,9 @@ Lake Shore and Waldron is not a particularly exciting intersection. Just south o
 
 ## The short attention span theory
 
-If we shift our focus to the roads instead of the drivers, it's not identifying solutions that is challenging, it's how we implement them. For a long list of reasons, roads today take years to build and decades to revise <sup>4</sup>. In an environment where most projects have a 5-10 year time horizon, a fact-based, iterative approach to addressing congestion (such as the analysis above) represents a fundamentally different way to think about traffic engineering. The short attention span theory, or the idea that **rapidly identifying and implementing solutions is more effective than long term, structural projects**, has been successfully applied on numerous occasions <sup>5</sup>.  <br><br>
+If we shift our focus to the roads instead of the drivers, it's not identifying solutions that is challenging, it's how we implement them. For a long list of reasons, roads today take years to build and decades to revise <sup>4</sup>. In an environment where most projects have a 5-10 year time horizon, a fact-based, iterative approach to addressing congestion (such as the analysis above) represents a fundamentally different way to think about traffic engineering. The short attention span theory, or the idea that **rapidly identifying and implementing solutions is more effective than pursuing longer term, structural projects**, has been successfully applied on numerous occasions <sup>5</sup>.  <br><br>
 
-Given the fundamental shift in how roads will be used over the next several decades, it is especially timely now to revisit how we think about traffic engineering. The journey to a world with less congestion is certainly not new, but still far from complete. Autonomous vehicles and AI-based traffic management will help, but many of these gains will be offset by sustained growth in travel distances and demand for shipping and logistics. Said simply, demand for infrastructure is still outpacing capacity.<br><br>
+Given the fundamental shift in how roads will be used over the next several decades, it is especially timely now to revisit how we think about traffic engineering. The journey to a world with less congestion is certainly not new, but still far from complete. Autonomous vehicles and AI-based traffic management will help, but many of these gains will be offset by sustained growth in travel distances and demand for shipping and logistics. Said simply, **demand for infrastructure is still outpacing capacity.**<br><br>
 
 For those of you who are traffic engineers, I'm optimistic innovation in vehicles will be met with innovation in infrastructure. To the rest of us - the next time you're stuck in traffic, take a moment to reflect on the road you're driving on. Could it have been better designed? Is anyone actually using the HOV lane? Are you waiting on a poorly timed light? You might not be going anywhere for a while.
 
@@ -77,11 +77,12 @@ Footnotes:
 [2] The intuitive remedy to congested highways is simply to add more lanes. Researchers have found that there is a 1:1 relationship between highway capacity and highway demand - motorists will increase miles driven up until road capacity is consumed. This pattern holds true as well for cities in which public transportation is introduced - for every car that is taken off the road, another is added directly back in the form of a new commuter [[Source](http://www.brown.edu/Departments/Economics/Faculty/Matthew_Turner/papers/published/Duranton_Turner_AER_2011.pdf)]
 
 [3] The complexity of coordinating ride sharing limits the impact of HOV lanes. Though there have been some time savings observed from introducing HOV lanes, the cars taken off the road (from people sharing rides) does not offset the reduction in capacity of a highway (from taking away a lane on the highway and turning it into an HOV lane) [[Source](http://www.sciencedirect.com/science/article/pii/S0968090X07000435)]
+
 [4] There are two commonly cited reasons for underinvestment in improving infrastructure. The first is a heavy bias of budget dollars to be allocated to new construction instead of improvements. The second is that tax revenue from vehicle usage and gas purchases is outnumbered by the actual cost of operating roads ~100:1 [[Source](http://www.lao.ca.gov/Publications/Report/3366#Highway_and_Road_Maintenance_and_Repair_Needs)]
 
 
 [5]
-The state of Washington found that roundabouts reduce delays by 89% and vehicle stops by 56% in areas they were implemented [[Source](https://www.wsdot.wa.gov/Safety/roundabouts/benefits.htm). In another study, improving logic and timing of traffic lights in a Switzerland town showed 20% reduction in travel time [[Source](http://news.mit.edu/2014/traffic-lights-theres-a-better-way-0707)]
+The state of Washington found that roundabouts reduce delays by 89% and vehicle stops by 56% in areas they were implemented [[Source](https://www.wsdot.wa.gov/Safety/roundabouts/benefits.htm)]. In another study, improving logic and timing of traffic lights in a Switzerland town showed 20% reduction in travel time [[Source](http://news.mit.edu/2014/traffic-lights-theres-a-better-way-0707)]
  
 
 
