--- a/_posts/2018-01-05-board.md
+++ b/_posts/2018-01-05-board.md
@@ -4,7 +4,7 @@ title:      '[Interview] What it’s like to be on the board of a Fortune 500 co
 date:       2017-03-05 
 summary:    A day in the life of a F500 board member
 hidden:     false
-og_image:   /assets/post7_board.jpeg
+og_image:   /assets/post7_boardroom.jpg
 ---
 
 Who does a CEO report to?<br><br>
