--- a/_posts/2018-01-05-board.md
+++ b/_posts/2018-01-05-board.md
@@ -13,7 +13,7 @@ Who does a CEO report to?<br><br>
 Most people in corporate America fall into one of two categories. In the first camp are those who work with CEOs in some capacity – senior leaders at corporate, their immediate support staff, the fateful associate who takes all the meeting notes, etc. Then there is a second camp of people who have virtually zero exposure to the CEO. These are your analysts, cashiers, and truck drivers of the world and they often don’t even know the CEO’s name.<br><br>
 
 
-But there is also a third group of people, those that *the CEO reports to*, called the Board of Directors. Though board members are rarely mentioned in the press and make far less than the CEO, make no mistake – they are the governing body of the corporate world. They can fire the CEO, decide how much executives get paid, and have to give their blessing on any major decision a company makes. <br><br>
+But there is also a third group of people, those that *the CEO reports to*, called the Board of Directors. Though board members are rarely mentioned in the press and paid far less than CEOs, make no mistake – they are the governing body of the corporate world. They can fire the CEO, decide how much executives get paid, and have to give their blessing on any major decision a company makes. <br><br>
 
 
 I sat down with an executive who is currently on the board of several Fortune 500 companies to ask a simple question – what do you actually do? They agreed to be interviewed on the condition that they remain anonymous. Below is an excerpt from my conversation. <br><br>
@@ -99,4 +99,4 @@ You can use executive search firms, but you typically need to be in the top 5 ex
 
 **Well [redacted] I appreciate your time, this has been incredibly interesting to talk about. Is there anything you'd like to add?**
 
-[I’ve] sat on boards with some amazing people who have done some amazing things in the world. Those experiences range from growing small companies into Fortune 500 companies. It has also allowed me to be involved with people who have been engaged in the highest levels of scientific research and our Country's security. The people I meet in this job are brilliant. Plain brilliant.
+[I’ve] sat on boards with some amazing people who have done some amazing things in the world. People who have grown small companies into Fortune 500 companies. It has also allowed me to be involved with people who have been engaged in the highest levels of scientific research and our country's security. The people I meet in this job are brilliant. Plain brilliant.
