change to title

--- a/_posts/2018-01-05-board.md
+++ b/_posts/2018-01-05-board.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      '[Interview] What it’s like to be on the board of a Fortune 500 company'
+title:      'What it’s like to be on the board of a Fortune 500 company'
 date:       2018-01-05 
 summary:    A day in the life of a F500 board member
 hidden:     false
