--- a/_posts/2017-01-01-traffic.md
+++ b/_posts/2017-01-01-traffic.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      To fix traffic, change the roads not the drivers
+title:      To Fix Traffic, Change The Roads Not The Drivers
 date:       2017-03-05 
 summary:    A case study on Chicago traffic
 hidden:     false
