added links to HN discussion

--- a/_posts/2018-01-05-board.md
+++ b/_posts/2018-01-05-board.md
@@ -100,3 +100,5 @@ You can use executive search firms, but you typically need to be in the top 5 ex
 **Well [redacted] I appreciate your time, this has been incredibly interesting to talk about. Is there anything you'd like to add?**
 
 [I’ve] sat on boards with some amazing people who have done some amazing things in the world. People who have grown small companies into Fortune 500 companies. It has also allowed me to be involved with people who have been engaged in the highest levels of scientific research and our country's security. The people I meet in this job are brilliant. Plain brilliant.
+
+*Update: See [here](https://news.ycombinator.com/item?id=16108235) for a discussion of this article on Hacker News*
